--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                     urge you to give web development a try. It may just be the lifeline you've been
                                     looking for, the thing that will change your life forever.
                                 </p>
-                                <a href="https://themarketingjewel.com.ng/theaccelerators" target="_blank"
+                                <a href="https://adenaikeidris.com.ng/theaccelerators" target="_blank"
                                     class="text-white bg-blue-500 py-2 px-4 rounded-md hover:bg-blue-600 transition duration-300 ease-in-out">Learn
                                     More</a>
                             </div>
@@ -616,7 +616,7 @@
                                         graphic
                                         designer
                                     </p>
-                                    <a href="https://themarketingjewel.com.ng/SantosPortfolio" target="_blank"
+                                    <a href="https://adenaikeidris.com.ng/SantosPortfolio" target="_blank"
                                         class="bg-white text-gray-800 py-2 px-4 rounded-md inline-block">View
                                     </a>
                                 </div>
@@ -646,7 +646,7 @@
                                     <p class="text-base tx-base tx-base mb-4">Countdown page created for Muslims before
                                         Ramadan
                                     </p>
-                                    <a href="https://themarketingjewel.com.ng/1444-ramadan-countdown" target="_blank"
+                                    <a href="https://adenaikeidris.com.ng/1444-ramadan-countdown" target="_blank"
                                         class="bg-white text-gray-800 py-2 px-4 rounded-md inline-block">View
                                     </a>
                                 </div>
