--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -29,7 +29,7 @@
                     updates, news, and special offers about brand, business and skill development.</p>
             </div>
             <div class="text-center">
-                <a href="https://themarketingjewel.com.ng/portfolio" class="inline-block bg-blue-500 text-white px-4 py-2 rounded-full transition-colors duration-300 hover:bg-blue-600">Go
+                <a href="https://adenaikeidris.com.ng" class="inline-block bg-blue-500 text-white px-4 py-2 rounded-full transition-colors duration-300 hover:bg-blue-600">Go
                     Back to Homepage</a>
             </div>
         </div>
