--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a href="#" class="flex items-center py-4 px-2">
                         <!-- <img src="" alt="logo"> -->
                         <span class="text-white text-lg tx-lg mx-2 font-semibold" style="font-family: 'Montserrat', sans-serif;
-                        font-weight: 600;">DRISADEN</span>
+                        font-weight: 600;"><img src="assets/images/drisadenlogo.png" alt=""></span>
                     </a>
                 </div>
                 <div class="hidden md:flex items-center md:justify-center mx-auto lg:w-full lg:pl-48 space-x-1">
