made changes to the logo

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <div class="flex">
                     <a href="#" class="flex items-center py-4 px-2">
                         <!-- <img src="" alt="logo"> -->
-                        <span class="text-white text-lg tx-lg mx-2 font-semibold" style="font-family: 'Montserrat', sans-serif;
-                        font-weight: 600;"><img src="assets/images/drisadenlogo.png" alt=""></span>
+                        <span class="text-white text-2xl tx-lg mx-2 font-semibold" style="font-family: 'Montserrat', sans-serif;
+                        font-weight: 600;"><img src="assets/images/drisadenlogo.png" alt="Drisaden -Profitable web designer" class="w-36"></span>
                     </a>
                 </div>
                 <div class="hidden md:flex items-center md:justify-center mx-auto lg:w-full lg:pl-48 space-x-1">
@@ -157,7 +157,7 @@
                                 <div class="bar h-1 w-28 bg-diamond-3 mt-2 mb-10 relative rounded-full"></div>
 
                                 <p class="text-gray-700 mb-4 text-base tx-base tx-base">My name is Adenaike
-                                    Idris(Drisaden), popularly
+                                    Idris (Drisaden), popularly
                                     called <strong>The Marketing Jewel</strong>. I'm a professional
                                     website designer
                                     and a digital expert. I help youths and young entrepreneurs leverage on the
@@ -231,7 +231,7 @@
                                     urge you to give web development a try. It may just be the lifeline you've been
                                     looking for, the thing that will change your life forever.
                                 </p>
-                                <a href="https://adenaikeidris.com.ng/theaccelerators" target="_blank"
+                                <a href="https://adenaikeidris.com.ng/7-figure-business" target="_blank"
                                     class="text-white bg-blue-500 py-2 px-4 rounded-md hover:bg-blue-600 transition duration-300 ease-in-out">Learn
                                     More</a>
                             </div>
