button added to portfolio

--- a/index.html
+++ b/index.html
@@ -580,8 +580,7 @@
                                         audience,
                                         drives action and build authority.</p>
                                     <a href="https://wa.link/xzq49v" target="_blank"
-                                        class="bg-blue-500 text-gray-100 py-2 px-4 rounded-md hover:bg-transparent hover:text-blue-500 transition duration-300">Book
-                                        A Gig</a>
+                                        class="bg-blue-500 text-gray-100 py-2 px-4 rounded-md hover:bg-transparent hover:text-blue-500 transition duration-300">Book A Gig</a>
                                 </div>
                                 <!-- <div class="relative">
                                 <img src="./assets/images/workspace.jfif" alt="Project 1" class="w-full h-auto">
@@ -600,8 +599,10 @@
                             </div>
                         </div>
                     </div>
-
-
+ <div class="flex justify-center align-center"><a href="./pricing"
+                class="block transition duration-300 inline-block text-white bg-diamond-2 hover:bg-transparent py-4 px-7 rounded-md font-bold text-xl tx-mont mr-4 mb-10 floaty3">
+                LEARN MORE <i class="fa fa-angle-right text-xl ml-1"></i></a>
+ </div>
                     <!-- Projects -->
                     <h2 class="text-2xl tx-2xl font-bold mb-4 ml-5 mt-10">My Recent Projects</h2>
                     <div class="bar h-1 w-28 bg-diamond-3 mt-2 mb-10 ml-5 relative rounded-full"></div>
@@ -671,7 +672,7 @@
                     </div>
 
                     <!-- Counter section -->
-                    <div class="py-16 counter-section">
+                    <div class="mt-10 border border-t md:border-0 py-16 counter-section">
                         <div class="text-center">
                             <h2 class="text-2xl tx-2xl font-bold mb-2">My Achievements</h2>
                             <div class="bar mx-auto h-1 w-28 bg-diamond-3 mt-2 mb-10 relative rounded-full"></div>
