--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                             </div>
                         </div>
                     </div>
- <div class="flex justify-center align-center"><a href="./pricing"
+ <div class="flex justify-center align-center"><a href="./pricing.html"
                 class="block transition duration-300 inline-block text-white bg-diamond-2 hover:bg-transparent py-4 px-7 rounded-md font-bold text-xl tx-mont mr-4 mb-10 floaty3">
                 LEARN MORE <i class="fa fa-angle-right text-xl ml-1"></i></a>
  </div>
