button added to projects

--- a/index.html
+++ b/index.html
@@ -599,7 +599,8 @@
                             </div>
                         </div>
                     </div>
- <div class="flex justify-center align-center"><a href="./pricing.html"
+ <div class="flex justify-center align-center">
+   <a href="./pricing.html"
                 class="block transition duration-300 inline-block text-white bg-diamond-2 hover:bg-transparent py-4 px-7 rounded-md font-bold text-xl tx-mont mr-4 mb-10 floaty3">
                 LEARN MORE <i class="fa fa-angle-right text-xl ml-1"></i></a>
  </div>
@@ -670,7 +671,10 @@
                             </div>
                         </div>
                     </div>
-
+<div class="flex justify-center align-center"><a href="./projects.html"
+                class="block transition duration-300 inline-block text-white bg-diamond-2 hover:bg-transparent py-4 px-7 rounded-md font-bold text-xl tx-mont mr-4 mb-10 floaty3">
+                VIEW MORE PROJECTS <i class="fa fa-angle-right text-xl ml-1"></i></a>
+ </div>
                     <!-- Counter section -->
                     <div class="mt-10 border border-t md:border-0 py-16 counter-section">
                         <div class="text-center">
