recent projects updated

--- a/index.html
+++ b/index.html
@@ -655,23 +655,23 @@
                             </div>
                         </div>
                         <div class="image-container relative overflow-hidden" data-aos="fade-up">
-                            <img src="./assets/images/amsb.webp" alt="Online course website designer"
+                            <img src="./assets/images/gigcourse.jpg" alt="Online course website designer"
                                 class="w-full h-auto">
                             <div
                                 class="overlay absolute top-0 left-0 w-full h-full bg-gray-800 opacity-80 transition-all duration-300">
                                 <div class="text-white absolute bottom-0 left-0 p-4">
-                                    <h3 class="text-lg tx-lg font-bold mb-2">Course Website</h3>
+                                    <h3 class="text-lg tx-lg font-bold mb-2">Course Sales Page</h3>
                                     <p class="text-base tx-base tx-base mb-4">Create this page for a course creator to
                                         promote his
                                         course
                                     </p>
-                                    <a href="https://digitalskillsacademy.com.ng/amsb/" target="_blank"
+                                    <a href="https://aff.stakecut.com/432955/852540" target="_blank"
                                         class="bg-white text-gray-800 py-2 px-4 rounded-md inline-block">View</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-<div class="flex justify-center align-center"><a href="./projects.html"
+<div class="mt-20 flex justify-center align-center"><a href="./projects.html"
                 class="block transition duration-300 inline-block text-white bg-diamond-2 hover:bg-transparent py-4 px-7 rounded-md font-bold text-xl tx-mont mr-4 mb-10 floaty3">
                 VIEW MORE PROJECTS <i class="fa fa-angle-right text-xl ml-1"></i></a>
  </div>
