changes made to projects section on the homepage

--- a/index.html
+++ b/index.html
@@ -605,7 +605,16 @@
                 LEARN MORE <i class="fa fa-angle-right text-xl ml-1"></i></a>
  </div>
                     <!-- Projects -->
+                    <div class="flex justify-between content-center items-center">
                     <h2 class="text-2xl tx-2xl font-bold mb-4 ml-5 mt-10">My Recent Projects</h2>
+                    <div class="hidden md:inline-block pt-5">
+                      
+                    
+                      <a href="./projects.html"
+                                        target="_blank"
+                                        class="link-btn inline-block tx-diamond mr-1 md:mr-5  py-2 font-bold md:font-medium relative leading-none">See more<i class="fa fa-angle-right text-sm ml-1"></i></a>
+                                        </div>
+                                        </div>
                     <div class="bar h-1 w-28 bg-diamond-3 mt-2 mb-10 ml-5 relative rounded-full"></div>
                     <div class="mx-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
                         <div class="image-container relative overflow-hidden" data-aos="fade-up">
@@ -1257,8 +1266,7 @@
                                     </p>
                                     <a href="https://drive.google.com/drive/folders/14YFdfgqai5GLdYmbXP6FTPx9IVYBt6l5?usp=drive_link"
                                         target="_blank"
-                                        class="link-btn my-3 inline-block tx-diamond  font-bold md:font-medium relative leading-none">Download
-                                        Now</a>
+                                        class="link-btn my-3 inline-block tx-diamond  font-bold md:font-medium relative leading-none">Download Now</a>
                                 </div>
                             </div>
                             <div class="border-b border-gray-400"></div>
