--- a/index.html
+++ b/index.html
@@ -1139,12 +1139,12 @@
             <section class="w-full bg-gray-100 my-4" id="contactme">
                 <div class="w-full h-full flex flex-row justify-center items-center">
                     <div class="w-full py-10 px-4">
-                        <div class="text-center text-2xl tx-2xl font-bold">Hire Me</div>
+                        <div class="text-center text-2xl tx-2xl font-bold">Why Am I The Right Person For The Job?</div>
                         <div class="bar mx-auto h-1 w-28 bg-diamond-3 mt-2 mb-10 relative rounded-full"></div>
                         <div>
                             <p class="text-base tx-base tx-base mt-5">
-                                Are you looking to hire a professional web developer with years of experience? Look no
-                                further! I specialize in HTML, CSS, and have great experience in JavaScript and React.
+                              If you are looking to hire a professional web developer with atleast 4 years of experience? Look no
+                                further! You are in the right place. I specialize in building websites with HTML, CSS, and also have great experience in JavaScript and React.
                             </p>
                             <p class="text-base tx-base tx-base mt-5">
                                 With my expertise in various web frameworks such as Bootstrap, Tailwind, and Bulma, I
@@ -1153,7 +1153,8 @@
                                 responsive and user-friendly websites. Additionally, I am familiar with various versions
                                 of
                                 third-party website builders such as <a href="https://wordpress.com" target="_blank"
-                                    rel="noopener" title="Wordpress" class="tx-diamond font-bold">Wordpress</a>, <a
+                                    rel="noopener" title="Wordpress" class="tx-diamond font-bold">Wordpress</a>, <a href="https://wix.com" target="_blank"
+                                    rel="noopener" title="Wix" class="tx-diamond font-bold">Wix</a>, <a
                                     href="https://carrd.co" target="_blank" rel="noopener" title="Carrd"
                                     class="tx-diamond font-bold">Carrd.co</a> and <a href="https://systeme.io"
                                     target="_blank" rel="noopener" title="Systeme"
@@ -1167,7 +1168,7 @@
                             </p>
                             <p class="text-base tx-base tx-base mt-5">
                                 If you're ready to take your next project to the next level? Let's work together!
-                               Send me a mail:
+                               Send me a mail. Let's get started immediately:
                             </p>
                         </div>
 
