--- a/tutorials.html
+++ b/tutorials.html
@@ -36,8 +36,8 @@
                 <div class="flex">
                     <a href="#" class="flex items-center py-4 px-2">
                         <!-- <img src="" alt="logo"> -->
-                        <span class="text-white text-lg tx-lg mx-2 font-semibold" style="font-family: 'Montserrat', sans-serif;
-                        font-weight: 600;">DRISADEN</span>
+                        <span class="text-white text-2xl tx-lg mx-2 font-semibold" style="font-family: 'Montserrat', sans-serif;
+                                                font-weight: 600;"><img src="assets/images/drisadenlogo.png" alt="Drisaden -Profitable web designer" class="w-36"></span>
                     </a>
                 </div>
                 <div class="hidden md:flex items-center md:justify-center mx-auto lg:w-full lg:pl-48 space-x-1">
@@ -45,7 +45,7 @@
                     <a href="./blog.html" class="py-4 px-2 text-white font-semibold hover:text-gray-300">Blog</a>
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfBW8peSoZOhmojarMQFOwwZpj-tUlFtez0_B90i52SIkHneQ/viewform" class="py-4 px-2 text-white font-semibold hover:text-gray-300">Book Call</a>
                     <a href="./projects.html" class="py-4 px-2 text-white font-semibold hover:text-gray-300">Projects</a>
-                    <a href="./pricing" class="py-4 px-2 text-white font-semibold hover:text-gray-300">Pricing</a>
+                    <a href="./pricing.html" class="py-4 px-2 text-white font-semibold hover:text-gray-300">Pricing</a>
                     <a href="./tutorials.html" class="py-4 px-2 text-white font-semibold hover:text-gray-300">Tutorials</a>
                 </div>
                 <div class="md:hidden flex items-center">
@@ -77,7 +77,7 @@
                 class="block py-2 px-4 tx-sm text-white font-semibold hover:bg-gray-900">Book Call</a>
             <a href="./projects.html"
                 class="block py-2 px-4 tx-sm text-white font-semibold hover:bg-gray-900">Projects</a>
-            <a href="./pricing" class="block py-2 px-4 tx-sm text-white font-semibold hover:bg-gray-900">Pricing</a>
+            <a href="./pricing.html" class="block py-2 px-4 tx-sm text-white font-semibold hover:bg-gray-900">Pricing</a>
             <a href="./tutorials.html"
                 class="block py-2 px-4 tx-sm text-white font-semibold hover:bg-gray-900">Tutorial
             </a>
