--- a/projects.html
+++ b/projects.html
@@ -46,9 +46,8 @@
                     <div class="flex md:mx-auto">
                         <a href="index.html" class="flex items-center py-4 px-2">
 
-
-                            <span class="text-white text-lg mx-2 font-semibold" style="font-family: 'Montserrat', sans-serif;
-                        font-weight: 600;">DRISADEN</span>
+<span class="text-white text-2xl tx-lg mx-2 font-semibold" style="font-family: 'Montserrat', sans-serif;
+                        font-weight: 600;"><img src="assets/images/drisadenlogo.png" alt="Drisaden -Profitable web designer" class="w-36"></span>
                         </a>
                     </div>
                     <div
