--- a/single.html
+++ b/single.html
@@ -46,8 +46,8 @@
                     <div class="flex md:mx-auto">
                         <a href="index.html" class="flex items-center py-4 px-2">
                             <!-- <img src="" alt="logo"> -->
-                            <span class="text-white text-lg mx-2 font-semibold" style="font-family: 'Montserrat', sans-serif;
-                        font-weight: 600;">DRISADEN</span>
+                            <span class="text-white text-2xl tx-lg mx-2 font-semibold" style="font-family: 'Montserrat', sans-serif;
+                                                    font-weight: 600;"><img src="assets/images/drisadenlogo.png" alt="Drisaden -Profitable web designer" class="w-36"></span>
                         </a>
                     </div>
                     <div class="text-white hidden md:flex items-center md:justify-center mx-auto lg:w-full lg:pl-48 space-x-1">
