--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
                         <div class="bar mx-auto h-1 w-28 bg-diamond-3 mt-2 mb-10 relative rounded-full"></div>
                         <div>
                             <p class="text-base tx-base tx-base mt-5">
-                              If you are looking to hire a professional web developer with atleast 4 years of experience? Look no
+                              If you are looking to hire a professional web developer with atleast 4 years of experience. Look no
                                 further! You are in the right place. I specialize in building websites with HTML, CSS, and also have great experience in JavaScript and React.
                             </p>
                             <p class="text-base tx-base tx-base mt-5">
