--- a/tutorials.html
+++ b/tutorials.html
@@ -122,9 +122,9 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
+                <div class="mx-5 md:mx-10">
                 <p class="my-5 md:text-2xl text-xl tx-sm text-red-500 font-bold">PLS, AVOID ANY
                     DISTRACTIONS AND DO NOT CLOSE THE TAB</p>
-                <div class="mx-10">
                     <a href="https://wa.link/a3pbmp"
                         class="text-lg md:text-2xl link-btn mt-3 inline-block  tx-diamond-2 font-semibold relative leading-none uppercase">I
                         want to get started now</a>
@@ -142,10 +142,30 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
                 </div>
-                <p class="px-4 my-5 md:text-2xl text-xl tx-sm text-red-500 font-bold">PLS, AVOID ANY
+                                <div class="mx-5 md:mx-10">
+                <p class="my-5 md:text-2xl text-xl tx-sm text-red-500 font-bold">PLS, AVOID ANY
                     DISTRACTIONS AND DO NOT CLOSE THE TAB</p>
-                <div class="mx-10">
                     <a href="https://wa.link/lzt1ku"
+                        class="text-lg md:text-2xl link-btn mt-3 inline-block  tx-diamond-2 font-semibold relative leading-none uppercase">I
+                        want to get started now</a>
+                </div>
+            </section>
+             <section class="mx-4 md:mx-0 py-6 my-10 rounded shadow-lg  text-center tx-diamond">
+                <h1 class="md:text-3xl py-3 font-bold text-2xl tx-diamond tx-2xl">GHOSTWRITING TRAINING</h1>
+                <h2 class="md:text-3xl md:py-5 p-3 md:px-4 md:leading-10 text-xl bg-diamond text-white">How To Earn $500-$1500 Monthly Writing For Foreign Brands From The Confort of Your Home
+                </h2>
+
+                <div class="mt-6 flex justify-center align-center">
+                    <iframe width="100%" height="400" src="https://www.youtube.com/embed/xCegWfu-9Pg"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+               
+                                <div class="mx-5 md:mx-10">
+                <p class="my-5 md:text-2xl text-xl tx-sm text-red-500 font-bold">PLS, AVOID ANY
+                    DISTRACTIONS AND DO NOT CLOSE THE TAB</p>
+                    <a href="https://wa.link/ak8k5x"
                         class="text-lg md:text-2xl link-btn mt-3 inline-block  tx-diamond-2 font-semibold relative leading-none uppercase">I
                         want to get started now</a>
                 </div>
