form somehow changed. still testing

--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,10 @@
                         <div class="w-full flex-shrink-0 w-full md:flex-shrink md:flex-shrink-0 md:w-auto">
                             <div id="contact"
                                 class="w-full md:mx-auto md:w-2/4 box-2 bg-white max-w-full py-10 px-5 border border-gray-400 rounded-lg mt-16 mr-5 mb-10 shadow-md h-500">
-                                <form action="#" id="hire-form">
+                                <form action="https://formsubmit.co/drisaden@gmail.com" id method="POST">
+                                 <!-- <form action="https://formsubmit.co/drisaden@gmail.com" id="hire-form" method="POST">-->
+                                 <input type="hidden" name="_subject" value="Idris, I need your service right away!">
+                                 <input type="hidden" name="_next" value="https://adenaikeidris.com.ng/thanks.html">
                                     <div class="w-full">
                                         <div class="user-input relative w-full mb-4">
                                             <br />
