--- a/index.html
+++ b/index.html
@@ -1200,17 +1200,17 @@
                                         </div>
                                     </div>
                                     <div class="w-full">
-                                        <select id="" style="font-size: 1.125rem; font-family: 'Montserrat', sans-serif;
+                                        <select id="priority-select" style="font-size: 1.125rem; font-family: 'Montserrat', sans-serif;
                                         font-weight: 500;"
                                             class="slabel py-2 px-4 w-full outline-none border border-gray-300 shadow rounded-lg ilabel text-lg tx-lg font-semibold text-black tracking-wider">
                                             <option value="">Priority</option>
-                                            <option value="">Personal</option>
-                                            <option value="">Business</option>
-                                            <option value="">Coaching</option>
-                                            <option value="">Report</option>
-                                            <option value="">Feedback</option>
-                                            <option value="">Suggestion</option>
-                                            <option value="">Others</option>
+    <option value="Personal">Personal</option>
+    <option value="Business">Business</option>
+    <option value="Coaching">Coaching</option>
+    <option value="Report">Report</option>
+    <option value="Feedback">Feedback</option>
+    <option value="Suggestion">Suggestion</option>
+    <option value="Others">Others</option>
                                         </select>
                                     </div>
                                     <div class="w-full">
@@ -1521,6 +1521,15 @@ fetch('https://www.googleapis.com/blogger/v3/blogs/4195482384384708356/posts?key
     </script>
    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
+    document.addEventListener('DOMContentLoaded', (event) => {
+    const selectElement = document.getElementById('priority-select');
+    const textArea = document.getElementById('message');
+
+    selectElement.addEventListener('change', (event) => {
+        const selectedOption = event.target.value;
+        textArea.value = `Hi, Drisaden. I want to secure a deal with you for ${selectedOption} purposes. Kindly get back to me ASAP. Thanks`;
+    });
+});
         AOS.init({
             offset: 200,
             duration: 1300,
