--- a/index.html
+++ b/index.html
@@ -1210,7 +1210,7 @@
     <option value="Report">Report</option>
     <option value="Feedback">Feedback</option>
     <option value="Suggestion">Suggestion</option>
-    <option value="Others">Others</option>
+    <option value="Other">Others</option>
                                         </select>
                                     </div>
                                     <div class="w-full">
