--- a/index.html
+++ b/index.html
@@ -1204,13 +1204,13 @@
                                         font-weight: 500;"
                                             class="slabel py-2 px-4 w-full outline-none border border-gray-300 shadow rounded-lg ilabel text-lg tx-lg font-semibold text-black tracking-wider">
                                             <option value="">Priority</option>
-    <option value="Personal">Personal</option>
-    <option value="Business">Business</option>
-    <option value="Coaching">Coaching</option>
-    <option value="Report">Report</option>
-    <option value="Feedback">Feedback</option>
-    <option value="Suggestion">Suggestion</option>
-    <option value="Other">Others</option>
+    <option value="personal">Personal</option>
+    <option value="business">Business</option>
+    <option value="coaching">Coaching</option>
+    <option value="report">Report</option>
+    <option value="feedback">Feedback</option>
+    <option value="suggestion">Suggestion</option>
+    <option value="other">Others</option>
                                         </select>
                                     </div>
                                     <div class="w-full">
