--- a/jsa.html
+++ b/jsa.html
@@ -10,7 +10,7 @@
     <meta name="keywords"
         content="Web design, programming, Sales funnel, nascent creator, landing page, Wordpress, web development">
     <meta name="author" content="Drisaden: The Marketing Jewel">
-    <title>Tutorials on How to leverage internet resources to create 7 figure business models </title>
+    <title>Welcome to The JEWELLIC SKILLS ACADEMY </title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.1.2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -89,15 +89,31 @@
         <div class="flex justify-center mx-auto items-center h-full px-6 md:px-16 lg:px-24 xl:px-32">
             <div class="text-white">
                 <div class="hidden" id="typed-strings">
-                    <p>On Amazon kdp</p>
-                    <p>On Internet Marketing</p>
-                    <p>On CPA Marketing</p>
-                    <p>On Ghostwriting</p>
+                    <p>On SALES</p>
+<p>On MARKETING</p>
+<p>On PAID ADVERTS</p>
+<p>On CONTENT MARKETING</p>
+<p>On GROWTH</p>
+<p>On CLIENTS ACQUISITION </p>
+<p>On SALES FUNNELS</p>
+<p>On WEB DEVELOPMENT</p>
+<p>On Al + AUTOMATION</p>
+<p>On BRANDING</p>
+<p>On BUSINESS</p>
+<p>On PSYCHOLOGY</p>
+<p>On COPYWRITING</p>
+<p>On GRAPHIC DESIGN</p>
+<p>On VIDEO EDITING </p>
+<p>On LEAD GENERATION</p>
+<p>On AUDIENCE BUILDING</p>
+                    
                 </div>
                 <div
                     class="mt-10 text-5xl md:text-6xl lg:text-7xl">
                     <h1 class="inline-block leading-none font-black"
-                        style="font-family: 'Montserrat', sans-serif; font-weight: 900;">TUTORIALS
+                        style="font-family: 'Montserrat', sans-serif; font-weight: 900;">
+HERE'S A JEWELIC OPPORTUNITY FOR YOU TO GET LIFETIME ACCESS TO DAILY LESSONS ON:
+
                     </h1>
                 </div>
                 <span class="leading-none font-bold text-xl md:text-xl lg:text-2xl" id="typed"
@@ -109,7 +125,29 @@
 
     <main class="flex flex-wrap">
         <article class="w-full mx-auto md:w-6/12 my-10">
-           
+            <!-- Details about JSA -->
+            <h2 class="text-3xl font-semibold mb-4">Unlock Your Full Potential with JSA</h2>
+            <p class="text-lg mb-4">
+                The Jewellic Skills Academy (JSA) is more than just a community; it's your gateway to a world of opportunities and knowledge. Founded by Drisaden, a seasoned digital expert with over 5 years of experience, JSA is designed to elevate your skills and turn you into a gem-worthy professional.
+            </p>
+
+            <!-- Features of JSA -->
+            <h3 class="text-xl font-semibold mb-2">Features:</h3>
+            <ul class="list-disc pl-6">
+                <li>Unlock daily lessons in various creative fields, including Sales, Marketing, Content Marketing, and more.</li>
+                <li>Access a treasure trove of resources, coupon codes, files, free courses, and design templates.</li>
+                <li>Master the art of Sales Funnels, Web Development, Branding, and Business strategies.</li>
+                <li>Explore the realms of Psychology, Copywriting, Graphic Design, Video Editing, and more.</li>
+                <li>Build your expertise in Lead Generation and Audience Building.</li>
+            </ul>
+
+            <!-- Joining instructions -->
+            <div class="mt-6">
+                <p class="text-lg">Ready to embark on this journey to professional excellence?</p>
+                <p class="text-lg">
+                    Join JSA now by filling out our form or sending "JSA" to +2347086334968 on WhatsApp. Don't miss this opportunity to become an authority in your creative field!
+                </p>
+            </div>
         </article>
     </main>
 
