--- a/jsa.html
+++ b/jsa.html
@@ -124,7 +124,7 @@ HERE'S A JEWELIC OPPORTUNITY FOR YOU TO GET LIFETIME ACCESS TO DAILY LESSONS ON:
     </header>
 
     <main class="flex flex-wrap">
-        <article class="w-full mx-auto md:w-6/12 my-10">
+        <article class="w-full mx-10 md:mx-auto md:w-6/12 my-10">
             <!-- Details about JSA -->
             <h2 class="text-3xl font-semibold mb-4">Unlock Your Full Potential with JSA</h2>
             <p class="text-lg mb-4">
