--- a/jsa.html
+++ b/jsa.html
@@ -109,10 +109,10 @@
                     
                 </div>
                 <div
-                    class="mt-10 text-5xl md:text-6xl lg:text-7xl">
+                    class="mt-10 text-2xl md:text-3xl lg:text-4xl">
                     <h1 class="inline-block leading-none font-black"
                         style="font-family: 'Montserrat', sans-serif; font-weight: 900;">
-HERE'S A JEWELIC OPPORTUNITY FOR YOU TO GET LIFETIME ACCESS TO DAILY LESSONS ON:
+HERE'S A JEWELIC OPPORTUNITY FOR YOU TO GET LIFETIME ACCESS TO DAILY LESSONS:
 
                     </h1>
                 </div>
