--- a/jsa/jsa.html
+++ b/jsa/jsa.html
@@ -25,8 +25,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-    <link rel="icon" type="image/png" href="./assets/images/myimage.webp">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" type="image/png" href="./jsa/images/brand-icon.png">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
 <body>
@@ -85,7 +85,7 @@
     </nav>
     
     <!-- Header section -->
-    <header class="relative bg-gray-700 bg-cover bg-center h-56" style="background-image: url('./assets/images/lg-bg.png');">
+    <header class="relative bg-gray-700 bg-cover bg-center h-56" style="background-image: url('./jsa/images/flyer.png');">
         <div class="flex justify-center mx-auto items-center h-full px-6 md:px-16 lg:px-24 xl:px-32">
             <div class="text-white">
                 <div class="hidden" id="typed-strings">
@@ -240,7 +240,7 @@ HERE'S A JEWELIC OPPORTUNITY FOR YOU TO GET LIFETIME ACCESS TO DAILY LESSONS:
         </div>
     </footer>
     
-   <script src="./assets/js/main.js"></script>
+   <script src="../assets/js/main.js"></script>
 </body>
 
 </html>
