--- a/jsa/jsa.html
+++ b/jsa/jsa.html
@@ -85,7 +85,7 @@
     </nav>
     
     <!-- Header section -->
-    <header class="relative bg-gray-700 bg-cover bg-center h-56" style="background-image: url('./jsa/images/flyer.png');">
+    <header class="relative bg-gray-700 bg-cover bg-center h-96" style="background-image: url('./images/flyer.png');">
         <div class="flex justify-center mx-auto items-center h-full px-6 md:px-16 lg:px-24 xl:px-32">
             <div class="text-white">
                 <div class="hidden" id="typed-strings">
