--- a/index.html
+++ b/index.html
@@ -393,6 +393,29 @@
                                                 </div>
                                             </div>
                                         </div>
+                                           <div class="mt-6 sm:mt-0 sm:mb-12">
+                                            <div class="flex flex-col sm:flex-row items-center">
+                                                <div class="ml-5 flex justify-start w-full mx-auto items-center">
+                                                    <div class="w-full mr-10 sm:pl-8">
+                                                        <div class="p-4 bg-white rounded shadow">
+                                                            <span
+                                                                class="bg-blue-100 tx-diamond tx-sm font-medium mr-2 px-2.5 ml-7 md:ml-2 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300">2023</span><br>
+                                                            <span class="text-base tx-base tx-base">Became Website Admin For Joy Agbim's AIP Blueprint</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div
+                                                    class="rounded-full bg-blue-500 border-white text-white border-4 h-12 w-12 absolute left-9 -translate-y-4 sm:translate-y-0 transform -translate-x-1/2 flex items-center justify-center">
+                                                    <i class="fa-sharp fa-solid fa-gears"></i>
+                                                    <!-- <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-white"
+                                                        fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                                            stroke-width="2"
+                                                            d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                                    </svg> -->
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
