--- a/projects.html
+++ b/projects.html
@@ -153,7 +153,7 @@
                     marketing Funnel setup, Ghostwriting gigs, e.t.c</p>
 
                 <p class="mt-10 text-2xl tx-mont leading-8 font-bold tracking-wide text-red-800">
-                    Below are the previous and current projects I've done and still doing for clients. Feel free to go through them before taking action to work with me.
+                    Below are the previous and current projects that I've done and still doing for clients. Feel free to go through them before taking action to work with me.
                 </p>
             </div>
         </section>
