--- a/index.html
+++ b/index.html
@@ -659,16 +659,14 @@
                     <div class="bar h-1 w-28 bg-diamond-3 mt-2 mb-10 ml-5 relative rounded-full"></div>
                     <div class="mx-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
                         <div class="image-container relative overflow-hidden" data-aos="fade-up">
-                            <img src="./assets/images/Santos_Portfolio.png"
-                                alt="A example of a graphic designer portfolio" class="w-full h-auto">
+                            <img src="../assets/images/currency_converter.jpg"
+                                alt="A example of a currency converter UI interface" class="w-full h-auto">
                             <div class="overlay absolute top-0 left-0 w-full h-full bg-gray-800 opacity-80 transition-all duration-300">
                                 <div class="text-white absolute bottom-0 left-0 p-4">
-                                    <h3 class="text-lg tx-lg font-bold mb-2">Portfolio Design</h3>
-                                    <p class="text-base tx-base tx-base mb-4">Just started building this portfolio for a
-                                        graphic
-                                        designer
+                                    <h3 class="text-lg tx-lg font-bold mb-2">Currency Converter</h3>
+                                    <p class="text-base tx-base tx-base mb-4">Just started building this currency converter as a new project.
                                     </p>
-                                    <a href="https://adenaikeidris.com.ng/SantosPortfolio" target="_blank"
+                                    <a href="https://adenaikeidris.com.ng/currencyconverter" target="_blank"
                                         class="bg-white text-gray-800 py-2 px-4 rounded-md inline-block">View
                                     </a>
                                 </div>
