--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
                                     class="text-center circular-progress relative h-36 w-36 rounded-full flex items-center justify-center shadow-lg transition duration-500 ease-in-out">
                                     <div
                                         class="z-10 flex flex-col justify-center items-center text-5xl font-bold mx-auto counter">
-                                        <span class="value-container  tx-diamond">51</span>
+                                        <span class="value-container  tx-diamond" value="51">0</span>
                                     </div>
                                 </div>
                                 <p class="text-center text-lg tx-lg font-semibold my-4">Projects Done</p>
@@ -746,7 +746,7 @@
                                     class="text-center circular-progress relative h-36 w-36 rounded-full flex items-center justify-center shadow-lg transition duration-500 ease-in-out">
                                     <div
                                         class="z-10 flex flex-col justify-center items-center text-5xl font-bold mx-auto counter">
-                                        <span class="value-container  tx-diamond">50</span>
+                                        <span class="value-container  tx-diamond" value="50">0</span>
                                     </div>
                                 </div>
                                 <p class="text-center text-lg tx-lg font-semibold my-4">Happy Customers</p>
@@ -756,7 +756,7 @@
                                     class="text-center circular-progress relative h-36 w-36 rounded-full flex items-center justify-center shadow-lg transition duration-500 ease-in-out">
                                     <div
                                         class="z-10 flex flex-col justify-center items-center text-5xl font-bold mx-auto counter">
-                                        <span class="value-container  tx-diamond">50</span>
+                                        <span class="value-container  tx-diamond" value="50">0</span>
                                     </div>
                                 </div>
                                 <p class="text-center text-lg tx-lg font-semibold my-4">Clients</p>
